# asar

./: .gitignore  CMakeLists.txt  README.md  package.json
cmake/: exe.cmake  lib.cmake  test.cmake
include/asar/: Asar.hpp  AsarError.hpp  AsarFileSystem.hpp  asar.h
src/lib/: Asar.cpp  Asar.hpp  AsarError.cpp  AsarFileSystem.cpp  AsarFileSystem.hpp  asar.rc.in  capi.cpp  index.cpp
test/: test.c
test/input/packthis/dir2/subdir/: 女の子.txt
